trunk/yanl/examples/t1/fail/operatie_logica.yanl
# La operatii logice, ambii operanzi trebuie sa fie de tipul boolean.

program dude;
var x:integer;
begin
   if (true and x) then
			   writestring("not ok");
end.